# Smart-Voter-management-and-EVM-System

./: .env.example  .gitignore  ACCESSIBILITY.md  ARCHITECTURE.md  README.md  RUN.md  SECURITY.md  VoteGuard_Pro_Flow_Plan.md  VoteGuard_Pro_Project_Proposal.md  architecture_diagram_drawio.xml  data_flow_diagram_level2.xml  key.key  pyproject.toml  requirements-base.txt  requirements-blockchain.txt  requirements-camera.txt  requirements-ml.txt  run_app.py  run_count_app.py  run_tally.py  user_usecase_diagram.xml  user_usecase_diagram_uml.xml  votes.json  workflow_diagram.xml
.github/workflows/: python-ci.yml
Phase 1A - Foundation/Month 2 - System Design/: Architecture_Documentation.md  Blockchain_Network_Planning.md  Hardware_Specifications.md  Security_Framework_Design.md
Phase 1A - Foundation/Month 3 - Prototype Development/: 1. Core Blockchain Implementation.md  cast_registry.json
Phase 1A - Foundation/models/: README.md
docs/: README.md  vote_blockchain_graph.html  voter_journey_flow.md  voting_machine_animation_storyboard.md
scripts/: cast_vote.py  demo_camera_detection.py  simulate_votes.py  tally_votes.py  verify_ledger.py
scripts/visualizations/: manim_vote_flow.py  pyvis_blockchain_demo.py  vote_animation_widget.py
tests/: test_admin_candidates_io.py  test_audit_logger.py  test_biometric_parties_load.py  test_counting.py  test_ledger.py  test_state_machine.py
voteguard/: app.py
voteguard/adapters/: audit_helper.py  audit_log_hashchain.py  chain_simulated.py  devices_mock.py  (+2 more)
voteguard_prototype.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+67 files in other folders)
